@@ -1,3 +1,6 @@
+2004-06-28 Hoda Amer
+	Patch for Keith Campbell, a small fix in CConventions. 
+	
 2004-06-24 Alain Magloire
 
 	Fix for 68226
